      via "sidebar_show_scrollbar = True" in multisite.mk 
    * Added option to disable automatic userdb synchronizations in multisite
    * Implemented search forms for most data tables
    * New icons in view footers: export as CSV, export as JSON
    * Availability: new columns for shortest, longest, average and count
    * LDAP: Supporting posixGroup with memberUid as member attribute
    * FIX: better error message in case of exception in SNMP handling
    * FIX: Inventory screen: Now shows custom checks
    * FIX: Fixed locking problem of multisite pages related to user loading/saving
    * FIX: Fixed wrong default settings of view filters in localized multisite
    * FIX: line wrapping of logwatch entries
    * Add: Added simple problems Dashboard

    WATO:
    * Allow to configure check-/retry_interval in second precision
    * vSphere secret is not shown to the user via WATO anymore
    * New rules for jolokia check (JVM): uptime, threads, sessions,
                                         requests, queue
    * Custom user attributes can now be managed using WATO
    * FIX: do validation of check items in rule editor
    * FIX: More consistent handling of folderpath select in rule editor
    * Add: Require unique alias names in between the following elements:
           Host/Service/Contact Groups, Timeperiods and Roles

    Notifications:
    * Flexible Notification can now filter service levels
    * FIX: check_tcp corrected order of parameters in definition

    Event Console:
    * New global setting "force message archiving", converts the EC into
      a kind of syslog archive
    * New built-in snmptrap server to directly receive snmp traps
    * FIX: fix layout of filter for history action type
    * FIX: better detect non-IP-number hosts in hostname translation

1.2.3i1:
    Core:
    * Agents can send data for other hosts "piggyback". This is being
      used by the vSphere and SAP plugins